bk_ida/gccida/c1/padding_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1329:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1329:36: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
                                   ^~~~~~~~~~~~
                                   cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1329:63: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * padding_token( cpp_reader_0 *pfile, const cpp_token_0 *source) 
                                                              ^~~~~~~~~~~
                                                              cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1331:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *result; // rax 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1335:38: error: expected expression
result->val.node = ( cpp_hashnode_0 *)source; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/cppmacro.c:1335:22: error: use of undeclared identifier 'cpp_hashnode_0'
result->val.node = ( cpp_hashnode_0 *)source; 
                     ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/padding_token/src/obj/cppmacro.o] Error 1
